--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/beccalee123/04-buffers#readme",
   "dependencies": {
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "reader": "0.0.8",
+    "readline": "^1.3.0"
   }
 }
